[ROBOT] Action all

--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -1,15 +1,15 @@
 {
     "plugins\/gsh\/plugin_info\/configuration.php": {
         "Serveur Google smarthome": "Serveur Google smarthome",
-        "Mode": "Mode",
+        "Mode": "Modus",
         "Service Jeedom Cloud": "Service Jeedom Cloud",
         "Service Interne": "Service Interne",
         "Envoyer configuration au market": "Envoyer configuration au market",
-        "Envoyer": "Envoyer",
+        "Envoyer": "senden",
         "DNS ou IP du serveur": "DNS ou IP du serveur",
-        "Configuration général": "Configuration général",
+        "Configuration général": "Allgemeine Konfiguration",
         "ID du projet Dialogflow": "ID du projet Dialogflow",
-        "Connection": "Connection",
+        "Connection": "Verbindung",
         "ID du projet Smarthome": "ID du projet Smarthome",
         "Clef maitre": "Clef maitre",
         "Clef API Google": "Clef API Google",
@@ -18,18 +18,18 @@
         "Clef API Interaction": "Clef API Interaction",
         "Chaine de sécurisation URL": "Chaine de sécurisation URL",
         "Port": "Port",
-        "Timeout": "Timeout",
+        "Timeout": "Zeitüberschreitung",
         "URL": "URL",
-        "Configuration": "Configuration",
-        "Voir": "Voir",
-        "Utilisateur": "Utilisateur",
+        "Configuration": "Konfiguration",
+        "Voir": "sehen",
+        "Utilisateur": "Benutzer",
         "ID utilisateur": "ID utilisateur",
-        "Nom d'utilisateur": "Nom d'utilisateur",
-        "Mot de passe": "Mot de passe",
-        "Token": "Token",
+        "Nom d'utilisateur": "Benutzername",
+        "Mot de passe": "Passwort",
+        "Token": "Zeichen",
         "Mode d'accès Jeedom": "Mode d'accès Jeedom",
-        "Interne": "Interne",
-        "Externe": "Externe",
+        "Interne": "intern",
+        "Externe": "extern",
         "Configuration utilisateur": "Configuration utilisateur",
         "Configuration envoyée avec succès": "Configuration envoyée avec succès",
         "Homegraph API Google": "Homegraph API Google",
@@ -48,43 +48,43 @@
         "Standalone": "Standalone"
     },
     "plugins\/gsh\/desktop\/php\/gsh.php": {
-        "Sauvegarder": "Sauvegarder",
+        "Sauvegarder": "Speichern",
         "Voir la configuration": "Voir la configuration",
-        "Equipement": "Equipement",
-        "Scénario": "Scénario",
+        "Equipement": "Gerät",
+        "Scénario": "Szenario",
         "Plugin": "Plugin",
-        "Transmettre": "Transmettre",
-        "Paramétrage": "Paramétrage",
-        "Type": "Type",
-        "Pseudo": "Pseudo",
-        "Action": "Action",
-        "Aucun": "Aucun",
-        "Lumière": "Lumière",
+        "Transmettre": "Übertragen",
+        "Paramétrage": "Einstellung",
+        "Type": "Typ",
+        "Pseudo": "Nickname",
+        "Action": "Aktion",
+        "Aucun": "Ohne",
+        "Lumière": "Licht",
         "Thermostat": "Thermostat",
         "Info Binaire\/Actionneur on\/off": "Info Binaire\/Actionneur on\/off",
-        "Caméra": "Caméra",
+        "Caméra": "Kamera",
         "Ajouter scène": "Ajouter scène",
-        "Volet": "Volet"
+        "Volet": "Jalousie"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
-        "Configuration de l'équipement": "Configuration de l'équipement",
-        "Synchronisation réussie": "Synchronisation réussie",
+        "Configuration de l'équipement": "Geräte Konfiguration",
+        "Synchronisation réussie": "erfolgreiche Synchronisation",
         "Vous avez": "Vous avez",
         "équipement(s) OK et": "équipement(s) OK et",
         "avec une configuration invalide": "avec une configuration invalide",
         "Configuration péripheriques": "Configuration péripheriques",
         "Nom de la scene ?": "Nom de la scene ?",
-        "Nouveau nom ?": "Nouveau nom ?",
+        "Nouveau nom ?": "Neuer Name",
         "Action d\\'entrée": "Action d\\'entrée",
-        "Action de sortie": "Action de sortie",
+        "Action de sortie": "Ausgangs Aktion",
         "Décocher pour desactiver l\\'action": "Décocher pour desactiver l\\'action",
         "Cocher pour que la commande s\\'éxecute en parrallele des autres actions": "Cocher pour que la commande s\\'éxecute en parrallele des autres actions",
-        "Sélectionner un mot-clé": "Sélectionner un mot-clé",
+        "Sélectionner un mot-clé": "Schlüsselwort auswählen",
         "Nom du scene": "Nom du scene",
-        "Supprimer": "Supprimer"
+        "Supprimer": "Löschen"
     },
     "plugins\/gsh\/core\/class\/gsh_thermostat.class.php": {
-        "Chauffage": "Chauffage",
-        "Climatisation": "Climatisation"
+        "Chauffage": "Heizung",
+        "Climatisation": "Klimaanlage"
     }
 }
