--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -5,11 +5,11 @@
         "Service Jeedom Cloud": "Service Jeedom Cloud",
         "Service Interne": "Service Interne",
         "Envoyer configuration au market": "Envoyer configuration au market",
-        "Envoyer": "Envoyer",
+        "Envoyer": "Send",
         "DNS ou IP du serveur": "DNS ou IP du serveur",
         "Configuration général": "Configuration général",
         "ID du projet Dialogflow": "ID du projet Dialogflow",
-        "Connection": "Connection",
+        "Connection": "Log In",
         "ID du projet Smarthome": "ID du projet Smarthome",
         "Clef maitre": "Clef maitre",
         "Clef API Google": "Clef API Google",
@@ -21,15 +21,15 @@
         "Timeout": "Timeout",
         "URL": "URL",
         "Configuration": "Configuration",
-        "Voir": "Voir",
-        "Utilisateur": "Utilisateur",
+        "Voir": "View",
+        "Utilisateur": "User",
         "ID utilisateur": "ID utilisateur",
-        "Nom d'utilisateur": "Nom d'utilisateur",
-        "Mot de passe": "Mot de passe",
+        "Nom d'utilisateur": "Username",
+        "Mot de passe": "Password",
         "Token": "Token",
         "Mode d'accès Jeedom": "Mode d'accès Jeedom",
-        "Interne": "Interne",
-        "Externe": "Externe",
+        "Interne": "Internal",
+        "Externe": "External",
         "Configuration utilisateur": "Configuration utilisateur",
         "Configuration envoyée avec succès": "Configuration envoyée avec succès",
         "Homegraph API Google": "Homegraph API Google",
@@ -48,43 +48,43 @@
         "Standalone": "Standalone"
     },
     "plugins\/gsh\/desktop\/php\/gsh.php": {
-        "Sauvegarder": "Sauvegarder",
+        "Sauvegarder": "Save",
         "Voir la configuration": "Voir la configuration",
-        "Equipement": "Equipement",
-        "Scénario": "Scénario",
+        "Equipement": "Device",
+        "Scénario": "Scenario",
         "Plugin": "Plugin",
-        "Transmettre": "Transmettre",
-        "Paramétrage": "Paramétrage",
+        "Transmettre": "Transmit",
+        "Paramétrage": "Configuration",
         "Type": "Type",
-        "Pseudo": "Pseudo",
+        "Pseudo": "Alias",
         "Action": "Action",
-        "Aucun": "Aucun",
-        "Lumière": "Lumière",
+        "Aucun": "None",
+        "Lumière": "Light",
         "Thermostat": "Thermostat",
         "Info Binaire\/Actionneur on\/off": "Info Binaire\/Actionneur on\/off",
-        "Caméra": "Caméra",
+        "Caméra": "Camera",
         "Ajouter scène": "Ajouter scène",
-        "Volet": "Volet"
+        "Volet": "Shutter"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
-        "Configuration de l'équipement": "Configuration de l'équipement",
-        "Synchronisation réussie": "Synchronisation réussie",
+        "Configuration de l'équipement": "Device configuration",
+        "Synchronisation réussie": "Synchronisation successful",
         "Vous avez": "Vous avez",
         "équipement(s) OK et": "équipement(s) OK et",
         "avec une configuration invalide": "avec une configuration invalide",
         "Configuration péripheriques": "Configuration péripheriques",
         "Nom de la scene ?": "Nom de la scene ?",
-        "Nouveau nom ?": "Nouveau nom ?",
+        "Nouveau nom ?": "New name?",
         "Action d\\'entrée": "Action d\\'entrée",
-        "Action de sortie": "Action de sortie",
+        "Action de sortie": "Output action",
         "Décocher pour desactiver l\\'action": "Décocher pour desactiver l\\'action",
         "Cocher pour que la commande s\\'éxecute en parrallele des autres actions": "Cocher pour que la commande s\\'éxecute en parrallele des autres actions",
-        "Sélectionner un mot-clé": "Sélectionner un mot-clé",
+        "Sélectionner un mot-clé": "Select a keyword",
         "Nom du scene": "Nom du scene",
-        "Supprimer": "Supprimer"
+        "Supprimer": "Delete"
     },
     "plugins\/gsh\/core\/class\/gsh_thermostat.class.php": {
-        "Chauffage": "Chauffage",
-        "Climatisation": "Climatisation"
+        "Chauffage": "Heating",
+        "Climatisation": "Air conditioning"
     }
 }
