--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -1,15 +1,15 @@
 {
     "plugins\/gsh\/plugin_info\/configuration.php": {
         "Serveur Google smarthome": "Serveur Google smarthome",
-        "Mode": "Mode",
+        "Mode": "Modo",
         "Service Jeedom Cloud": "Service Jeedom Cloud",
         "Service Interne": "Service Interne",
         "Envoyer configuration au market": "Envoyer configuration au market",
-        "Envoyer": "Envoyer",
+        "Envoyer": "Enviar",
         "DNS ou IP du serveur": "DNS ou IP du serveur",
         "Configuration général": "Configuration général",
         "ID du projet Dialogflow": "ID du projet Dialogflow",
-        "Connection": "Connection",
+        "Connection": "Conexión",
         "ID du projet Smarthome": "ID du projet Smarthome",
         "Clef maitre": "Clef maitre",
         "Clef API Google": "Clef API Google",
@@ -17,19 +17,19 @@
         "Cient Secret": "Cient Secret",
         "Clef API Interaction": "Clef API Interaction",
         "Chaine de sécurisation URL": "Chaine de sécurisation URL",
-        "Port": "Port",
+        "Port": "Puerto",
         "Timeout": "Timeout",
         "URL": "URL",
-        "Configuration": "Configuration",
-        "Voir": "Voir",
-        "Utilisateur": "Utilisateur",
+        "Configuration": "Configuración",
+        "Voir": "Ver",
+        "Utilisateur": "Usuario",
         "ID utilisateur": "ID utilisateur",
-        "Nom d'utilisateur": "Nom d'utilisateur",
-        "Mot de passe": "Mot de passe",
+        "Nom d'utilisateur": "Nombre de usuario",
+        "Mot de passe": "Contraseña",
         "Token": "Token",
         "Mode d'accès Jeedom": "Mode d'accès Jeedom",
-        "Interne": "Interne",
-        "Externe": "Externe",
+        "Interne": "Interno",
+        "Externe": "Externa",
         "Configuration utilisateur": "Configuration utilisateur",
         "Configuration envoyée avec succès": "Configuration envoyée avec succès",
         "Homegraph API Google": "Homegraph API Google",
@@ -37,10 +37,10 @@
         "Fulfillment URL : ": "Fulfillment URL : ",
         "Authorization URL : ": "Authorization URL : ",
         "Token URL : ": "Token URL : ",
-        "Information": "Information",
+        "Information": "Información",
         "Oauth": "Oauth",
         "Smarthome": "Smarthome",
-        "Interaction": "Interaction",
+        "Interaction": "Interacción",
         "[Optionnel] Clef authentification header (authkey)": "[Optionnel] Clef authentification header (authkey)",
         "Clef d'accès sécurisé": "Clef d'accès sécurisé",
         "Clef authentification header (authkey)": "Clef authentification header (authkey)",
@@ -48,43 +48,43 @@
         "Standalone": "Standalone"
     },
     "plugins\/gsh\/desktop\/php\/gsh.php": {
-        "Sauvegarder": "Sauvegarder",
+        "Sauvegarder": "Guardar",
         "Voir la configuration": "Voir la configuration",
-        "Equipement": "Equipement",
-        "Scénario": "Scénario",
+        "Equipement": "Dispositivos",
+        "Scénario": "Escenario",
         "Plugin": "Plugin",
-        "Transmettre": "Transmettre",
-        "Paramétrage": "Paramétrage",
-        "Type": "Type",
-        "Pseudo": "Pseudo",
-        "Action": "Action",
-        "Aucun": "Aucun",
-        "Lumière": "Lumière",
-        "Thermostat": "Thermostat",
+        "Transmettre": "Transmitir",
+        "Paramétrage": "Parametraje",
+        "Type": "Tipo",
+        "Pseudo": "Apodo",
+        "Action": "Acción",
+        "Aucun": "Ninguno",
+        "Lumière": "Iluminación",
+        "Thermostat": "Termostato",
         "Info Binaire\/Actionneur on\/off": "Info Binaire\/Actionneur on\/off",
-        "Caméra": "Caméra",
+        "Caméra": "Cámara",
         "Ajouter scène": "Ajouter scène",
-        "Volet": "Volet"
+        "Volet": "Persiana"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
-        "Configuration de l'équipement": "Configuration de l'équipement",
-        "Synchronisation réussie": "Synchronisation réussie",
+        "Configuration de l'équipement": "Configuración del dispositivo",
+        "Synchronisation réussie": "Sincronizado con éxito",
         "Vous avez": "Vous avez",
         "équipement(s) OK et": "équipement(s) OK et",
         "avec une configuration invalide": "avec une configuration invalide",
         "Configuration péripheriques": "Configuration péripheriques",
         "Nom de la scene ?": "Nom de la scene ?",
-        "Nouveau nom ?": "Nouveau nom ?",
+        "Nouveau nom ?": "¿ Nuevo nombre ?",
         "Action d\\'entrée": "Action d\\'entrée",
-        "Action de sortie": "Action de sortie",
+        "Action de sortie": "Acción de salida",
         "Décocher pour desactiver l\\'action": "Décocher pour desactiver l\\'action",
         "Cocher pour que la commande s\\'éxecute en parrallele des autres actions": "Cocher pour que la commande s\\'éxecute en parrallele des autres actions",
-        "Sélectionner un mot-clé": "Sélectionner un mot-clé",
+        "Sélectionner un mot-clé": "Seleccionar una palabra clave",
         "Nom du scene": "Nom du scene",
-        "Supprimer": "Supprimer"
+        "Supprimer": "Borrar"
     },
     "plugins\/gsh\/core\/class\/gsh_thermostat.class.php": {
-        "Chauffage": "Chauffage",
-        "Climatisation": "Climatisation"
+        "Chauffage": "Calefacción",
+        "Climatisation": "Climatización"
     }
 }
