--- a/core/i18n/pt_PT.json
+++ b/core/i18n/pt_PT.json
@@ -1,11 +1,11 @@
 {
     "plugins\/gsh\/plugin_info\/configuration.php": {
         "Serveur Google smarthome": "Serveur Google smarthome",
-        "Mode": "Mode",
+        "Mode": "modo",
         "Service Jeedom Cloud": "Service Jeedom Cloud",
         "Service Interne": "Service Interne",
         "Envoyer configuration au market": "Envoyer configuration au market",
-        "Envoyer": "Envoyer",
+        "Envoyer": "enviar",
         "DNS ou IP du serveur": "DNS ou IP du serveur",
         "Configuration général": "Configuration général",
         "ID du projet Dialogflow": "ID du projet Dialogflow",
@@ -17,16 +17,16 @@
         "Cient Secret": "Cient Secret",
         "Clef API Interaction": "Clef API Interaction",
         "Chaine de sécurisation URL": "Chaine de sécurisation URL",
-        "Port": "Port",
+        "Port": "porta",
         "Timeout": "Timeout",
         "URL": "URL",
-        "Configuration": "Configuration",
-        "Voir": "Voir",
-        "Utilisateur": "Utilisateur",
+        "Configuration": "configuração",
+        "Voir": "vista",
+        "Utilisateur": "usuário",
         "ID utilisateur": "ID utilisateur",
-        "Nom d'utilisateur": "Nom d'utilisateur",
-        "Mot de passe": "Mot de passe",
-        "Token": "Token",
+        "Nom d'utilisateur": "Nome de Usuário",
+        "Mot de passe": "senha",
+        "Token": "símbolo",
         "Mode d'accès Jeedom": "Mode d'accès Jeedom",
         "Interne": "Interne",
         "Externe": "Externe",
@@ -37,7 +37,7 @@
         "Fulfillment URL : ": "Fulfillment URL : ",
         "Authorization URL : ": "Authorization URL : ",
         "Token URL : ": "Token URL : ",
-        "Information": "Information",
+        "Information": "Informação",
         "Oauth": "Oauth",
         "Smarthome": "Smarthome",
         "Interaction": "Interaction",
@@ -48,43 +48,43 @@
         "Standalone": "Standalone"
     },
     "plugins\/gsh\/desktop\/php\/gsh.php": {
-        "Sauvegarder": "Sauvegarder",
+        "Sauvegarder": "salvar",
         "Voir la configuration": "Voir la configuration",
-        "Equipement": "Equipement",
-        "Scénario": "Scénario",
+        "Equipement": "equipamento",
+        "Scénario": "cenário",
         "Plugin": "Plugin",
         "Transmettre": "Transmettre",
         "Paramétrage": "Paramétrage",
-        "Type": "Type",
-        "Pseudo": "Pseudo",
-        "Action": "Action",
-        "Aucun": "Aucun",
-        "Lumière": "Lumière",
-        "Thermostat": "Thermostat",
+        "Type": "tipo",
+        "Pseudo": "apelido",
+        "Action": "ação",
+        "Aucun": "não",
+        "Lumière": "luz",
+        "Thermostat": "termóstato",
         "Info Binaire\/Actionneur on\/off": "Info Binaire\/Actionneur on\/off",
-        "Caméra": "Caméra",
+        "Caméra": "câmera",
         "Ajouter scène": "Ajouter scène",
-        "Volet": "Volet"
+        "Volet": "aba"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
-        "Configuration de l'équipement": "Configuration de l'équipement",
-        "Synchronisation réussie": "Synchronisation réussie",
+        "Configuration de l'équipement": "Configuração de equipamento",
+        "Synchronisation réussie": "sincronização bem-sucedida",
         "Vous avez": "Vous avez",
         "équipement(s) OK et": "équipement(s) OK et",
         "avec une configuration invalide": "avec une configuration invalide",
         "Configuration péripheriques": "Configuration péripheriques",
         "Nom de la scene ?": "Nom de la scene ?",
-        "Nouveau nom ?": "Nouveau nom ?",
+        "Nouveau nom ?": "Novo nome?",
         "Action d\\'entrée": "Action d\\'entrée",
         "Action de sortie": "Action de sortie",
         "Décocher pour desactiver l\\'action": "Décocher pour desactiver l\\'action",
         "Cocher pour que la commande s\\'éxecute en parrallele des autres actions": "Cocher pour que la commande s\\'éxecute en parrallele des autres actions",
-        "Sélectionner un mot-clé": "Sélectionner un mot-clé",
+        "Sélectionner un mot-clé": "Selecione uma palavra-chave",
         "Nom du scene": "Nom du scene",
-        "Supprimer": "Supprimer"
+        "Supprimer": "remover"
     },
     "plugins\/gsh\/core\/class\/gsh_thermostat.class.php": {
-        "Chauffage": "Chauffage",
+        "Chauffage": "Aquecimento",
         "Climatisation": "Climatisation"
     }
 }
