--- a/core/i18n/ru_RU.json
+++ b/core/i18n/ru_RU.json
@@ -1,11 +1,11 @@
 {
     "plugins\/gsh\/plugin_info\/configuration.php": {
         "Serveur Google smarthome": "Serveur Google smarthome",
-        "Mode": "Mode",
+        "Mode": "Режим",
         "Service Jeedom Cloud": "Service Jeedom Cloud",
         "Service Interne": "Service Interne",
         "Envoyer configuration au market": "Envoyer configuration au market",
-        "Envoyer": "Envoyer",
+        "Envoyer": "Отправить",
         "DNS ou IP du serveur": "DNS ou IP du serveur",
         "Configuration général": "Configuration général",
         "ID du projet Dialogflow": "ID du projet Dialogflow",
@@ -17,18 +17,18 @@
         "Cient Secret": "Cient Secret",
         "Clef API Interaction": "Clef API Interaction",
         "Chaine de sécurisation URL": "Chaine de sécurisation URL",
-        "Port": "Port",
-        "Timeout": "Timeout",
+        "Port": "Порт",
+        "Timeout": "Тайм-аут",
         "URL": "URL",
-        "Configuration": "Configuration",
-        "Voir": "Voir",
-        "Utilisateur": "Utilisateur",
+        "Configuration": "Конфигурация",
+        "Voir": "Вид",
+        "Utilisateur": "Пользователь",
         "ID utilisateur": "ID utilisateur",
-        "Nom d'utilisateur": "Nom d'utilisateur",
-        "Mot de passe": "Mot de passe",
-        "Token": "Token",
+        "Nom d'utilisateur": "Имя пользователя",
+        "Mot de passe": "Пароль",
+        "Token": "Знак",
         "Mode d'accès Jeedom": "Mode d'accès Jeedom",
-        "Interne": "Interne",
+        "Interne": "Внутренний",
         "Externe": "Externe",
         "Configuration utilisateur": "Configuration utilisateur",
         "Configuration envoyée avec succès": "Configuration envoyée avec succès",
@@ -37,10 +37,10 @@
         "Fulfillment URL : ": "Fulfillment URL : ",
         "Authorization URL : ": "Authorization URL : ",
         "Token URL : ": "Token URL : ",
-        "Information": "Information",
+        "Information": "Информация",
         "Oauth": "Oauth",
         "Smarthome": "Smarthome",
-        "Interaction": "Interaction",
+        "Interaction": "Взаимодействие",
         "[Optionnel] Clef authentification header (authkey)": "[Optionnel] Clef authentification header (authkey)",
         "Clef d'accès sécurisé": "Clef d'accès sécurisé",
         "Clef authentification header (authkey)": "Clef authentification header (authkey)",
@@ -48,43 +48,43 @@
         "Standalone": "Standalone"
     },
     "plugins\/gsh\/desktop\/php\/gsh.php": {
-        "Sauvegarder": "Sauvegarder",
+        "Sauvegarder": "экономить",
         "Voir la configuration": "Voir la configuration",
-        "Equipement": "Equipement",
-        "Scénario": "Scénario",
-        "Plugin": "Plugin",
+        "Equipement": "Оборудование",
+        "Scénario": "Сценарий",
+        "Plugin": "Плагин",
         "Transmettre": "Transmettre",
-        "Paramétrage": "Paramétrage",
-        "Type": "Type",
-        "Pseudo": "Pseudo",
-        "Action": "Action",
-        "Aucun": "Aucun",
-        "Lumière": "Lumière",
-        "Thermostat": "Thermostat",
+        "Paramétrage": "Настройки",
+        "Type": "Тип",
+        "Pseudo": "Ник",
+        "Action": "Действие",
+        "Aucun": "нет",
+        "Lumière": "Освещение",
+        "Thermostat": "Термостат",
         "Info Binaire\/Actionneur on\/off": "Info Binaire\/Actionneur on\/off",
-        "Caméra": "Caméra",
+        "Caméra": "Камера",
         "Ajouter scène": "Ajouter scène",
-        "Volet": "Volet"
+        "Volet": "створка"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
-        "Configuration de l'équipement": "Configuration de l'équipement",
-        "Synchronisation réussie": "Synchronisation réussie",
+        "Configuration de l'équipement": "Конфигурация оборудования",
+        "Synchronisation réussie": "Успешная синхронизация",
         "Vous avez": "Vous avez",
         "équipement(s) OK et": "équipement(s) OK et",
         "avec une configuration invalide": "avec une configuration invalide",
         "Configuration péripheriques": "Configuration péripheriques",
         "Nom de la scene ?": "Nom de la scene ?",
-        "Nouveau nom ?": "Nouveau nom ?",
+        "Nouveau nom ?": "Новое имя?",
         "Action d\\'entrée": "Action d\\'entrée",
         "Action de sortie": "Action de sortie",
         "Décocher pour desactiver l\\'action": "Décocher pour desactiver l\\'action",
         "Cocher pour que la commande s\\'éxecute en parrallele des autres actions": "Cocher pour que la commande s\\'éxecute en parrallele des autres actions",
-        "Sélectionner un mot-clé": "Sélectionner un mot-clé",
+        "Sélectionner un mot-clé": "Выберите ключевое слово",
         "Nom du scene": "Nom du scene",
-        "Supprimer": "Supprimer"
+        "Supprimer": "удаление"
     },
     "plugins\/gsh\/core\/class\/gsh_thermostat.class.php": {
-        "Chauffage": "Chauffage",
+        "Chauffage": "Отопление",
         "Climatisation": "Climatisation"
     }
 }
