--- a/core/i18n/tr.json
+++ b/core/i18n/tr.json
@@ -1,11 +1,11 @@
 {
     "plugins\/gsh\/plugin_info\/configuration.php": {
         "Serveur Google smarthome": "Serveur Google smarthome",
-        "Mode": "Mode",
+        "Mode": "Mod",
         "Service Jeedom Cloud": "Service Jeedom Cloud",
         "Service Interne": "Service Interne",
         "Envoyer configuration au market": "Envoyer configuration au market",
-        "Envoyer": "Envoyer",
+        "Envoyer": "Gönder",
         "DNS ou IP du serveur": "DNS ou IP du serveur",
         "Configuration général": "Configuration général",
         "ID du projet Dialogflow": "ID du projet Dialogflow",
@@ -20,16 +20,16 @@
         "Port": "Port",
         "Timeout": "Timeout",
         "URL": "URL",
-        "Configuration": "Configuration",
-        "Voir": "Voir",
-        "Utilisateur": "Utilisateur",
+        "Configuration": "Ayarlar",
+        "Voir": "Bak",
+        "Utilisateur": "Kullanıcı",
         "ID utilisateur": "ID utilisateur",
-        "Nom d'utilisateur": "Nom d'utilisateur",
-        "Mot de passe": "Mot de passe",
+        "Nom d'utilisateur": "Kullanıcı adı ",
+        "Mot de passe": "Şifre",
         "Token": "Token",
         "Mode d'accès Jeedom": "Mode d'accès Jeedom",
-        "Interne": "Interne",
-        "Externe": "Externe",
+        "Interne": "İç",
+        "Externe": "Dış",
         "Configuration utilisateur": "Configuration utilisateur",
         "Configuration envoyée avec succès": "Configuration envoyée avec succès",
         "Homegraph API Google": "Homegraph API Google",
@@ -37,7 +37,7 @@
         "Fulfillment URL : ": "Fulfillment URL : ",
         "Authorization URL : ": "Authorization URL : ",
         "Token URL : ": "Token URL : ",
-        "Information": "Information",
+        "Information": "Bilgi",
         "Oauth": "Oauth",
         "Smarthome": "Smarthome",
         "Interaction": "Interaction",
@@ -48,43 +48,43 @@
         "Standalone": "Standalone"
     },
     "plugins\/gsh\/desktop\/php\/gsh.php": {
-        "Sauvegarder": "Sauvegarder",
+        "Sauvegarder": "Kaydet",
         "Voir la configuration": "Voir la configuration",
-        "Equipement": "Equipement",
-        "Scénario": "Scénario",
-        "Plugin": "Plugin",
-        "Transmettre": "Transmettre",
-        "Paramétrage": "Paramétrage",
-        "Type": "Type",
-        "Pseudo": "Pseudo",
-        "Action": "Action",
-        "Aucun": "Aucun",
-        "Lumière": "Lumière",
-        "Thermostat": "Thermostat",
+        "Equipement": "Cihaz",
+        "Scénario": "Senaryo",
+        "Plugin": "Eklenti",
+        "Transmettre": "Ilet",
+        "Paramétrage": "Ayarlama",
+        "Type": "Çeşit",
+        "Pseudo": "Rumuz",
+        "Action": "Eylem",
+        "Aucun": "Hiçbir",
+        "Lumière": "Işık",
+        "Thermostat": "Termostat",
         "Info Binaire\/Actionneur on\/off": "Info Binaire\/Actionneur on\/off",
-        "Caméra": "Caméra",
+        "Caméra": "Kamera",
         "Ajouter scène": "Ajouter scène",
-        "Volet": "Volet"
+        "Volet": "Kepenek"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
-        "Configuration de l'équipement": "Configuration de l'équipement",
-        "Synchronisation réussie": "Synchronisation réussie",
+        "Configuration de l'équipement": "Cihazın ayarları",
+        "Synchronisation réussie": "Sekronizasyon başarılı",
         "Vous avez": "Vous avez",
         "équipement(s) OK et": "équipement(s) OK et",
         "avec une configuration invalide": "avec une configuration invalide",
         "Configuration péripheriques": "Configuration péripheriques",
         "Nom de la scene ?": "Nom de la scene ?",
-        "Nouveau nom ?": "Nouveau nom ?",
+        "Nouveau nom ?": "Yeni isim ?",
         "Action d\\'entrée": "Action d\\'entrée",
-        "Action de sortie": "Action de sortie",
+        "Action de sortie": "Çıkış eylemi",
         "Décocher pour desactiver l\\'action": "Décocher pour desactiver l\\'action",
         "Cocher pour que la commande s\\'éxecute en parrallele des autres actions": "Cocher pour que la commande s\\'éxecute en parrallele des autres actions",
-        "Sélectionner un mot-clé": "Sélectionner un mot-clé",
+        "Sélectionner un mot-clé": "Anahtar kelime seçin",
         "Nom du scene": "Nom du scene",
-        "Supprimer": "Supprimer"
+        "Supprimer": "Sil"
     },
     "plugins\/gsh\/core\/class\/gsh_thermostat.class.php": {
-        "Chauffage": "Chauffage",
-        "Climatisation": "Climatisation"
+        "Chauffage": "Kalorifer",
+        "Climatisation": "Klima"
     }
 }
