--- a/core/i18n/it_IT.json
+++ b/core/i18n/it_IT.json
@@ -1,11 +1,11 @@
 {
     "plugins\/gsh\/plugin_info\/configuration.php": {
         "Serveur Google smarthome": "Serveur Google smarthome",
-        "Mode": "Mode",
+        "Mode": "Modalità",
         "Service Jeedom Cloud": "Service Jeedom Cloud",
         "Service Interne": "Service Interne",
         "Envoyer configuration au market": "Envoyer configuration au market",
-        "Envoyer": "Envoyer",
+        "Envoyer": "Invia",
         "DNS ou IP du serveur": "DNS ou IP du serveur",
         "Configuration général": "Configuration général",
         "ID du projet Dialogflow": "ID du projet Dialogflow",
@@ -17,16 +17,16 @@
         "Cient Secret": "Cient Secret",
         "Clef API Interaction": "Clef API Interaction",
         "Chaine de sécurisation URL": "Chaine de sécurisation URL",
-        "Port": "Port",
+        "Port": "Porta",
         "Timeout": "Timeout",
         "URL": "URL",
-        "Configuration": "Configuration",
-        "Voir": "Voir",
-        "Utilisateur": "Utilisateur",
+        "Configuration": "Configurazione",
+        "Voir": "Visualizza",
+        "Utilisateur": "Utente",
         "ID utilisateur": "ID utilisateur",
-        "Nom d'utilisateur": "Nom d'utilisateur",
-        "Mot de passe": "Mot de passe",
-        "Token": "Token",
+        "Nom d'utilisateur": "Nome utente",
+        "Mot de passe": "Password",
+        "Token": "segno",
         "Mode d'accès Jeedom": "Mode d'accès Jeedom",
         "Interne": "Interne",
         "Externe": "Externe",
@@ -37,10 +37,10 @@
         "Fulfillment URL : ": "Fulfillment URL : ",
         "Authorization URL : ": "Authorization URL : ",
         "Token URL : ": "Token URL : ",
-        "Information": "Information",
+        "Information": "Informazione",
         "Oauth": "Oauth",
         "Smarthome": "Smarthome",
-        "Interaction": "Interaction",
+        "Interaction": "Interazione",
         "[Optionnel] Clef authentification header (authkey)": "[Optionnel] Clef authentification header (authkey)",
         "Clef d'accès sécurisé": "Clef d'accès sécurisé",
         "Clef authentification header (authkey)": "Clef authentification header (authkey)",
@@ -48,43 +48,43 @@
         "Standalone": "Standalone"
     },
     "plugins\/gsh\/desktop\/php\/gsh.php": {
-        "Sauvegarder": "Sauvegarder",
+        "Sauvegarder": "salvare",
         "Voir la configuration": "Voir la configuration",
-        "Equipement": "Equipement",
-        "Scénario": "Scénario",
+        "Equipement": "Dispositivo",
+        "Scénario": "Scena",
         "Plugin": "Plugin",
         "Transmettre": "Transmettre",
         "Paramétrage": "Paramétrage",
-        "Type": "Type",
-        "Pseudo": "Pseudo",
-        "Action": "Action",
-        "Aucun": "Aucun",
-        "Lumière": "Lumière",
-        "Thermostat": "Thermostat",
+        "Type": "Tipo",
+        "Pseudo": "Pseudonimo",
+        "Action": "Azione",
+        "Aucun": "no",
+        "Lumière": "Luce",
+        "Thermostat": "Termostato",
         "Info Binaire\/Actionneur on\/off": "Info Binaire\/Actionneur on\/off",
-        "Caméra": "Caméra",
+        "Caméra": "Telecamera",
         "Ajouter scène": "Ajouter scène",
-        "Volet": "Volet"
+        "Volet": "falda"
     },
     "plugins\/gsh\/desktop\/js\/gsh.js": {
-        "Configuration de l'équipement": "Configuration de l'équipement",
-        "Synchronisation réussie": "Synchronisation réussie",
+        "Configuration de l'équipement": "Configurazione dispositivo",
+        "Synchronisation réussie": "Sincronizzazione avvenuta con successo",
         "Vous avez": "Vous avez",
         "équipement(s) OK et": "équipement(s) OK et",
         "avec une configuration invalide": "avec une configuration invalide",
         "Configuration péripheriques": "Configuration péripheriques",
         "Nom de la scene ?": "Nom de la scene ?",
-        "Nouveau nom ?": "Nouveau nom ?",
+        "Nouveau nom ?": "Nuovo nome ?",
         "Action d\\'entrée": "Action d\\'entrée",
-        "Action de sortie": "Action de sortie",
+        "Action de sortie": "Azione d'\\uscita",
         "Décocher pour desactiver l\\'action": "Décocher pour desactiver l\\'action",
         "Cocher pour que la commande s\\'éxecute en parrallele des autres actions": "Cocher pour que la commande s\\'éxecute en parrallele des autres actions",
-        "Sélectionner un mot-clé": "Sélectionner un mot-clé",
+        "Sélectionner un mot-clé": "Seleziona una parola chiave",
         "Nom du scene": "Nom du scene",
-        "Supprimer": "Supprimer"
+        "Supprimer": "rimuovere"
     },
     "plugins\/gsh\/core\/class\/gsh_thermostat.class.php": {
-        "Chauffage": "Chauffage",
+        "Chauffage": "Riscaldamento",
         "Climatisation": "Climatisation"
     }
 }
